--- a/src/App.css
+++ b/src/App.css
@@ -17,4 +17,19 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
+}
+
+.form-main {
+  display: flex;
+  background-color: var(--White);
+  width: 500px;
+  height: auto;
+  border-radius: 12px;
+  padding: 30px;
+}
+
+.form-main h2 {
+  color: var(--GreyDark);
+  margin: 0;
 }
