--- a/src/App.css
+++ b/src/App.css
@@ -41,11 +41,12 @@ body {
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-  margin: 25px 0;
+  margin: 10px 0;
+  gap: 13px;
 }
 
 .box-input {
-  width: 265px;
+  width: 100%;
 }
 
 .box-input .label {
