--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,9 @@ body {
 
 .form-main h2 {
   color: var(--GreyDark);
+  font-weight: 700;
   margin: 0;
+  margin-bottom: 15px;
 }
 
 .form-section {
@@ -49,16 +51,22 @@ body {
   width: 100%;
 }
 
-.label {
+.label-title {
   font-size: 0.9rem;
 }
 
 .box-input input {
   width: 100%;
   margin: 8px 0;
-  border-radius: 6px;
+}
+
+input, textarea {
+  color: var(--GreyDark);
+  font-size: 1rem;
   padding: 10px 16px;
+  border-radius: 6px;
   text-decoration: none;
+  font-family: "Karla", sans-serif;
   border: 1px solid var(--GreyMedium);
 }
 
@@ -71,23 +79,35 @@ body {
   display: flex;
   width: 100%;
   flex-direction: row;
-  border: 1px solid black;
-  padding: 10px 15px;
+  border: 1px solid var(--GreyMedium);
+  padding: 10px 18px;
   border-radius: 6px;
+  cursor: pointer;
+}
+
+.radio-option:has(input[type=radio]:checked) {
+  background-color: var(--GreenLight);
+  border-color: var(--GreenMedium);
 }
 
 input[type=radio] {
-  transform: scale(1.2);
+  display: flex;
+  transform: scale(1.3);
+  margin: 0;
   margin-right: 15px;
-  border: 6px solid black;
-  border-radius: 50%;
-  
-}
-
-input[type=radio]:checked {
-  accent-color: red;
+  accent-color: var(--GreenMedium);
+  cursor: pointer;
 }
 
 .radio-option label {
   width: 100%;
+  cursor: pointer;
+}
+
+textarea {
+  width: 100%;
+  height: 80px;
+  resize: none;
+  margin: 8px 0px;
+  line-height: 1.2rem;
 }
