--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,22 @@ textarea {
   margin: 8px 0px;
   line-height: 1.2rem;
 }
+
+.form-section:has(input[type=checkbox]) {
+  justify-content: flex-start;
+}
+
+.checkbox-input {
+  display: flex;
+  align-items: center;
+}
+
+input[type=checkbox] {
+  width: 16px;
+  height: 16px;
+  margin: 0;
+}
+
+.checkbox-input label{
+  margin-left: 15px;
+}
