--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,12 @@ body {
   gap: 13px;
 }
 
+.form-section:nth-of-type(3) {
+  flex-direction: column;
+  justify-content:unset;
+  gap: 0;
+}
+
 .box-input {
   width: 100%;
 }
@@ -63,24 +69,28 @@ body {
 input, textarea {
   color: var(--GreyDark);
   font-size: 1rem;
-  padding: 10px 16px;
+  padding: 12px 16px;
   border-radius: 6px;
   text-decoration: none;
   font-family: "Karla", sans-serif;
   border: 1px solid var(--GreyMedium);
 }
 
-.radio-box {
-  width: 100%;
+input:focus, textarea:focus, input:hover, textarea:hover{
+  border-color: var(--GreenMedium);
+  outline: none;
+}
+
+.radio-section {
+  margin: 8px 0;
   display: flex;
+  justify-content: space-between;
+  gap: 13px;
 }
 
 .radio-option {
-  display: flex;
   width: 100%;
-  flex-direction: row;
   border: 1px solid var(--GreyMedium);
-  padding: 10px 18px;
   border-radius: 6px;
   cursor: pointer;
 }
@@ -90,18 +100,22 @@ input, textarea {
   border-color: var(--GreenMedium);
 }
 
-input[type=radio] {
-  display: flex;
-  transform: scale(1.3);
-  margin: 0;
-  margin-right: 15px;
-  accent-color: var(--GreenMedium);
-  cursor: pointer;
-}
-
 .radio-option label {
+  display: flex;
+  align-items: center;
+  gap: 16px;
   width: 100%;
   cursor: pointer;
+  padding: 12px 16px;
+}
+
+input[type=radio] {
+  display: block;
+  transform: scale(1.3);
+  margin: 0;
+  accent-color: var(--GreenMedium);
+  cursor: pointer;
+  
 }
 
 textarea {
@@ -119,14 +133,38 @@ textarea {
 .checkbox-input {
   display: flex;
   align-items: center;
+  margin: 8px 0;
+  cursor: pointer;
 }
 
 input[type=checkbox] {
   width: 16px;
   height: 16px;
   margin: 0;
+  cursor: pointer;
 }
 
 .checkbox-input label{
   margin-left: 15px;
+  cursor: pointer;
+}
+
+button {
+  width: 100%;
+  padding: 12px;
+  background-color: var(--GreenMedium);
+  border-radius: 6px;
+  border: 3px solid var(--GreenMedium);
+  color: var(--White);
+  font-family: "Karla", sans-serif;
+  font-weight: 700;
+  margin: 8px 0;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+button:hover {
+  background-color: var(--GreyDark);
+  border-color: var(--GreyDark);
+  transition: 0.1s ease-in;
 }
