--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,7 @@ input[type=checkbox] {
   height: 16px;
   margin: 0;
   cursor: pointer;
+  accent-color: var(--GreenMedium);
 }
 
 .checkbox-input label{
